Fix jumping proposal cards on hover.
Also convert tabs to spaces

--- a/src/components/Proposal/ProposalCard.scss
+++ b/src/components/Proposal/ProposalCard.scss
@@ -1,5 +1,5 @@
 .hidden {
-	display: none;
+  display: none;
 }
 
 .invisible {
@@ -7,25 +7,25 @@
 }
 
 .loading {
-	display: none;
-	position: absolute;
-	width: 80%;
-	height: 70%;
-	top: 15%;
-	left: 15%;
-	text-align: center;
-	z-index: 100000;
-	box-shadow: $shadow-2;
-	border-radius: 3px;
-	background-color: $white;
+  display: none;
+  position: absolute;
+  width: 80%;
+  height: 70%;
+  top: 15%;
+  left: 15%;
+  text-align: center;
+  z-index: 100000;
+  box-shadow: $shadow-2;
+  border-radius: 3px;
+  background-color: $white;
 
-	img {
+  img {
     height: 35px;
     top: 50%;
     transform: translate(-50%, -50%);
     position: absolute;
     left: 50%;
-	}
+  }
 }
 
 .proposalContainer {
@@ -34,44 +34,44 @@
 }
 
 .proposal {
-	width: 315px;
-	border-radius: 0 15px 15px 15px;
-	background-color: $white;
-	margin-right: 20px;
-	margin-top: 20px;
-	margin-bottom: 0px;
-	display: inline-block;
-	position: relative;
-	box-shadow: 0 0 15px 0 rgba(133,168,208,.15);
-	overflow: hidden;
-	transition: all .25s ease;
-	vertical-align: top;
+  width: 315px;
+  border-radius: 0 15px 15px 15px;
+  background-color: $white;
+  margin-right: 20px;
+  margin-top: 20px;
+  margin-bottom: 0px;
+  display: inline-block;
+  position: relative;
+  box-shadow: 0 0 15px 0 rgba(133,168,208,.15);
+  overflow: hidden;
+  transition: all .25s ease;
+  vertical-align: top;
 
   .description, .url {
-  	display: none;
+    display: none;
   }
 }
 
 .proposalInfo {
-	font-size: $body;
+  font-size: $body;
 
-	a {
-		color: $black;
-	}
+  a {
+    color: $black;
+  }
 
-	h3 {
-		font-size: $body;
-		margin: 4px 10px 10px 11px;
-	}
+  h3 {
+    font-size: $body;
+    margin: 4px 10px 10px 11px;
+  }
 
-	.closedTime {
-		position: relative;
-		display: block;
-		font-weight: $normal;
-		font-size: 11px;
-		color: $black-halftone;
-		margin: 6px 0 0 12px;
-	}
+  .closedTime {
+    position: relative;
+    display: block;
+    font-weight: $normal;
+    font-size: 11px;
+    color: $black-halftone;
+    margin: 6px 0 0 12px;
+  }
 }
 
 .detailLink img {
@@ -81,35 +81,36 @@
 }
 
 .proposal:hover {
-	z-index: 10000;
-	box-shadow: 0 0 2px 0 #3278CA;
-	overflow: visible;
-	margin-bottom: -37px;
+  z-index: 10000;
+  box-shadow: 0 0 2px 0 #3278CA;
+  overflow: visible;
+  margin-bottom: -57px;
 
-	.proposalActions {
-		height: 120px;
-	}
+  .proposalActions {
+    height: 120px;
+  }
 }
 
 .failedProposal .proposalInfo, .passedProposal .proposalInfo {
-	left: 60px;
+  left: 60px;
 }
 
 .voteBox {
-	position: relative;
-	float: left;
-	border-right: 1px solid rgba(215, 225, 237, 1.000);
-	width: 49%;
+  position: relative;
+  float: left;
+  border-right: 1px solid rgba(215, 225, 237, 1.000);
+  width: 49%;
 }
 
 .voteBox.unconfirmedVote {
-	.loading {
-		display: block;
-	}
+  .loading {
+    display: block;
+  }
 }
 
 .voteButtons {
-	padding-top: 13px;
+  padding-top: 13px;
+  text-align: center;
 }
 
 .voteControls {
@@ -127,101 +128,101 @@
 }
 
 .predictions {
-	position: relative;
-	float: right;
-	width: 49%;
-	padding-top: 10px;
+  position: relative;
+  float: right;
+  width: 49%;
+  padding-top: 10px;
 }
 
 .predictionButtons {
-	padding-top: 5px;
+  padding-top: 5px;
 }
 
 .cardTop {
-	height: 20px;
+  height: 20px;
 
-	.timer {
-		float: left;
-		width: 80%;
-		text-align: left;
-		font-size: 12px;
+  .timer {
+    float: left;
+    width: 80%;
+    text-align: left;
+    font-size: 12px;
 
-		span {
-			display: inline-block;
-			margin: 6px 0 0 12px;
-			opacity: .6;
-		}
-	}
+    span {
+      display: inline-block;
+      margin: 6px 0 0 12px;
+      opacity: .6;
+    }
+  }
 }
 
 .stateChange {
-	float: left;
-	width: 50%;
-	text-align: right;
-	font-size: 12px;
-	position: absolute;
-	top: 0;
-	right: 0;
+  float: left;
+  width: 50%;
+  text-align: right;
+  font-size: 12px;
+  position: absolute;
+  top: 0;
+  right: 0;
 
-	button {
-		background-color: rgba(0, 118, 255, 1.000);
-		border-radius: 10px;
-		height: 20px;
-		line-height: 20px;
-		padding: 0 6px;
-		color: $white;
-		border: none;
-		transition: all .25s ease;
-	    margin: 0;
-	}
+  button {
+    background-color: rgba(0, 118, 255, 1.000);
+    border-radius: 10px;
+    height: 20px;
+    line-height: 20px;
+    padding: 0 6px;
+    color: $white;
+    border: none;
+    transition: all .25s ease;
+    margin: 0;
+  }
 
-	.executeProposal, .boostProposal {
-		display: inline-block;
-		position: absolute;
-		top: 10px;
-		right: 10px;
-	}
+  .executeProposal, .boostProposal {
+    display: inline-block;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+  }
 
-	.executeProposal, .boostProposal {
-		width: 20px;
-		overflow: hidden;
+  .executeProposal, .boostProposal {
+    width: 20px;
+    overflow: hidden;
 
-		span {
-			display: inline-block;
-			padding-left: 6px;
-		}
-	}
+    span {
+      display: inline-block;
+      padding-left: 6px;
+    }
+  }
 
-	.executeProposal:hover {
-		width: 76px;
-	}
+  .executeProposal:hover {
+    width: 76px;
+  }
 
-	.boostProposal:hover {
-		width: 66px;
-	}
+  .boostProposal:hover {
+    width: 66px;
+  }
 }
 
 .proposalActions {
-	position: relative;
-	transition: all .25s ease;
-	margin-top: 15px;
-	border-top: 1px solid rgba(215, 225, 237, 1.000);
-	height: 63px;
-	overflow: hidden;
+  position: relative;
+  transition: all .25s ease;
+  margin-top: 15px;
+  border-top: 1px solid rgba(215, 225, 237, 1.000);
+  height: 63px;
+  overflow: hidden;
 }
 
 .createdBy {
-	font-size: $small;
-	color: $black-thirdtone;
-	margin-top: 16px;
+  font-size: $small;
+  color: $black-thirdtone;
+  margin-top: 16px;
 
-	.targetAccount {
-		top: 7px;
-		left: 4px;
+  .targetAccount {
+    top: 7px;
+    left: 4px;
 
-		img {
-			width: 16px;
-			height: 16px;
-		}
-	}
+    img {
+      width: 16px;
+      height: 16px;
+    }
+  }
 }
